== 2.1 (????-??-??) ==
- Fixed some minor memory leaks
- Added IPv6 support

== 2.0 (2009-01-25) ==
- Major rewrite
- Multi-channel support
- Unix socket support
- Forward text after a linebreak
- New option: -d - disable the tcp listener
- New option: -i - change the IRC ident
- New option: -f - run in foreground and log to stdout
- New option: -l <address> to change the listen address (TCP sockets)
- Support address:port format for -s
- Fix: Exit when nickname is in use
- Fix: fixed several leaks
- Fix: reduced memory usage

== 1.1 (2008-11-20) ==
- First release